# pcl.js

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .npmignore  .release-it.json  .releaserc  CHANGELOG.md  CONTRIBUTING-zh_CN.md  CONTRIBUTING.md  LICENSE  README-zh_CN.md  README.md  ROADMAP-zh_CN.md  ROADMAP.md  declaration.d.ts  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: lint.yml  release.yml  test.yml
data/: ism_test_horse.pcd  ism_test_michael.pcd  min_cut_segmentation_tutorial.pcd
examples/data/: ism_test_lioness.pcd
examples/data/template_alignment/: person.pcd
scripts/: build-pcl.sh  build.sh
src/: constants.ts  emscripten-types.d.ts  emscripten.d.ts  emscripten.types.d.ts  global.d.ts  index.ts  types.d.ts  typings.d.ts
src/bind/: .clang-format  CMakeLists.txt  common.cpp  embind.cpp  embind.hpp  features.cpp  filters.cpp  io.cpp  kdtree.cpp  keypoints.cpp  main.cpp  point_indices.cpp  point_types.cpp  registration.cpp  search.cpp  segmentation.cpp
src/bind/io/: io.cpp  pcd_data_reader.hpp  pcd_data_writer.hpp
src/core/: base.ts  browser.ts  index.ts  node.ts
src/embind/: CMakeLists.txt  Makefile  filters.cpp  io.cpp  main.cpp  registration.cpp  test.cpp
src/modules/common/: Manager.ts  ModelCoefficients.ts  PCLBase.ts  PointCloud.ts  index.ts  point-types.ts  utils.ts
src/modules/features/: FPFHEstimation.ts  Feature.ts  FeatureFromNormals.ts  NormalEstimation.ts  index.ts
src/modules/filters/: ApproximateVoxelGrid.ts  FilterBase.ts  FilterIndices.ts  GridMinimum.ts  LocalMaximum.ts  PassThrough.ts  RadiusOutlierRemoval.ts  RandomSample.ts  StatisticalOutlierRemoval.ts  UniformSampling.ts  VoxelGrid.ts  index.ts  remove-invalid.ts
src/modules/fs/: index.ts
src/modules/io/: index.ts  pcd-reader.ts
src/modules/kdtree/: KdTree.ts  KdTreeFLANN.ts  index.ts
src/modules/keypoints/: ISSKeypoint3D.ts  Keypoint.ts  index.ts
src/modules/point-indices/: index.ts  type.ts
src/modules/point-types/: index.ts  type.ts
src/modules/registration/: IterativeClosestPoint.ts  Registration.ts  SampleConsensusInitialAlignment.ts  index.ts
src/modules/sample-consensus/: constants.ts
src/modules/search/: KdTree.ts  Search.ts  SearchKdTree.ts  index.ts
src/modules/segmentation/: MinCutSegmentation.ts  SACSegmentation.ts  index.ts
src/types/: emscripten.ts  index.ts  point-types.d.ts  utils.ts
src/utils/: index.ts
src/visualization/: PointCloudViewer.ts  index.ts  utils.ts
src/visualization/vendors/: OrbitControls.js  PCDLoader.js
tests/: ApproximateVoxelGrid.test.ts  FileSystem.test.ts  GridMinimum.test.ts  ISSKeypoint3D.test.ts  InitializePCL.test.ts  IterativeClosestPoint.test.ts  KdTreeFLANN.test.ts  LocalMaximum.test.ts  MinCutSegmentation.test.ts  MinCutSegmentation.test.ts.bk  PassThrough.test.ts  PointCloud.test.ts  RadiusOutlierRemoval.test.ts  RandomSample.test.ts  SearchKdTree.test.ts  StatisticalOutlierRemoval.test.ts  UniformSampling.test.ts  VoxelGrid.test.ts  common.ts  index.html  loadPCDData.test.ts  loadPCDFile.test.ts  readPCDHeader.test.ts  savePCDData.test.ts  savePCDFile.test.ts  setup-tests.ts  utils.ts
tests/common/: InitializePCL.test.ts  PointCloud.test.ts
tests/filters/: ApproximateVoxelGrid.test.ts  GridMinimum.test.ts  LocalMaximum.test.ts  PassThrough.test.ts  RadiusOutlierRemoval.test.ts  RandomSample.test.ts  StatisticalOutlierRemoval.test.ts  UniformSampling.test.ts  VoxelGrid.test.ts  exist-nan.pcd  removeNaNFromPointCloud.test.ts
tests/io/: FileSystem.test.ts  loadPCDData.test.ts  loadPCDFile.test.ts  readPCDHeader.test.ts  savePCDData.test.ts  savePCDFile.test.ts
tests/kdtree/: KdTreeFLANN.test.ts
tests/keypoints/: ISSKeypoint3D.test.ts
tests/registration/: IterativeClosestPoint.test.ts  SampleConsensusInitialAlignment.test.ts
tests/search/: SearchKdTree.test.ts
tests/segmentation/: MinCutSegmentation.test.ts  SACSegmentation.test.ts
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/docs/api/: about.md  basic-structures.mdx  fs.mdx  intro.md  utils.md
website/docs/api/features/: _category_.json  fpfh-estimation.md  normal-estimation.md
website/docs/api/filters/: _category_.json  approximate-voxel-grid.md  grid-minimum.md  local-maximum.md  pass-through.mdx  radius-outlier-removal.mdx  random-sample.md  remove-nan-from-point-cloud.md  remove-nan-normals-from-point-cloud.md  statistical-outlier-removal.mdx  uniform-sampling.mdx  voxel-grid.mdx
website/docs/api/io/: _category_.json  load-pcd-data.md  load-pcd-file.md  read-pcd-file-header.md  read-pcd-header.md  save-pcd-data-ascii.md  save-pcd-data-binary-compressed.md  save-pcd-data-binary.md  save-pcd-data.md  save-pcd-file-ascii.md  save-pcd-file-binary-compressed.md  save-pcd-file-binary.md  save-pcd-file.md
website/docs/api/kd-tree/: _category_.json  kd-tree-flann.mdx
website/docs/api/keypoints/: ISSKeypoint3D.mdx  _category_.json
website/docs/api/registration/: _category_.json  iterative-closest-point.md  iterative-closest-point.mdx  sample-consensus-initial-alignment.md
website/docs/api/search/: _category_.json  kd-tree.mdx
website/docs/api/segmentation/: _category_.json  min-cut-segmentation.md  sac-segmentation.md
website/docs/api/visualization/: _category_.json  point-cloud-viewer.md
website/docs/tutorials/: intro.md
website/docs/tutorials/advanced-tutorials/: _category_.json
website/docs/tutorials/contributing/: code-of-conduct.md  how-to-contribute.md
website/docs/tutorials/getting-started/: _category_.json  installation.mdx  playground.mdx  usage.mdx
website/i18n/en/: code.json
website/i18n/zh-cn/: code.json
website/i18n/zh-cn/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/src/utils/: common.ts
(+34 files in other folders)
